Fix width of evaluations on smaller screens

--- a/app/assets/stylesheets/evaluations.scss
+++ b/app/assets/stylesheets/evaluations.scss
@@ -9,7 +9,7 @@
     display: inline-block;
     padding: 0 10px 10px 0;
     vertical-align: top;
-    width: 49.9%;
+    width: 49%;
   }
 }
 
